# email-sender

./: .coveragerc  .env.example  .env.sample  .gitignore  AUDIT_FINAL_REPORT.md  AUDIT_RESULTS_CRITICAL.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_CONSOLIDATION.md  FIXATION_SUMMARY.md  LESSONS_LEARNED.md  OPTIMIZATION_QUICK_REFERENCE.md  PADROES_DE_PROJETO.md  PROJECT_COMPLETION_REPORT.md  QWEN.md  README.md  README.md.new  REGRAS_DE_NEGOCIO.md  SECURITY_AUDIT_DEDUPLICATION.md  TODO.md  analysis_section.md  cmd_continue.sh  cmd_schedule.sh  cmd_send.sh  cmd_test.sh  conftest.py  debug_prepare_sql.py  deploy.sh  development_standards.md  email_setup_section.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  example.properties  example_config.yaml  example_email.yaml  example_emails.csv.md  example_template.html  poc_send_emails.py  pyproject.toml  pytest.ini  (+16 more)
.github/: business_rules.prompt.md  copilot-instructions.md
backups/: treineinsite_backup_20251105_152241.dump
config/: api-docs.yaml.example  config.yaml  config.yaml.optimized  config.yaml.test  email.yaml  rest.yaml.example
config/templates/: base.html  descadastro.html  email.html  email.html.example  error.html  recadastro.html
docs/: BUG_FIX_FINAL_REPORT.md  CLEAR_FLAGS_MENU.md  CONCLUSION.md  OPTIMIZATION_COMPLETE_V3.md  OPTIMIZATION_FIXES_APPLIED.md  OPTIMIZATION_PHASE_2_COMPLETE.md  PERFORMANCE_GARGALOS_IDENTIFICADOS.md  PERFORMANCE_IMPROVEMENTS.md  QUICK_FIX_REFERENCE.md  bug_fix_sql_recipients_2025_11_06.md  prd.md
email-sender-2/: .env.sample  pyproject.toml
email-sender-2/src/email_sender2/: cli.py  config.py  db.py  domain.py  repositories.py  ui.py  use_cases.py
n8n/: _Sympla____Get_Event_Info.json  _email_____Unsubscribe.json  _email______Abriu_email.json  _email______Clicou_no_Link_Webhook_Evento_Atual.json  _email_______Bounces.json  _email_______Bounces.json:Zone.Identifier  _email_______Sending_Emails_PROD (1).json  _sympla_____Set_Event_Info.json
previews/: preview_20250812_012257.html  preview_20250812_132459.html
prompts/: subject_generation.md
scripts/: analyze_failed_emails.py  check_contact.py  check_contents.py  check_db.py  check_problem_contacts.py  check_problematic_contacts.py  check_tables.py  check_test_contacts.py  debug_smtp.py  ensure_problem_tag.py  import_contacts_smart.py  import_xlsx_to_postgres.py  init_db.py  remove_duplicate_contacts.py  reset_send_state.py  send_from_csv.py  test_deduplication.py
specs/: PRD.md  architecture.md
sql/analysis/: analyze_contacts_import.sql
sql/contacts/: check_contact_eligible.sql  check_contact_exclusions.sql  check_duplicates.sql  count_bounces_since_id.sql  count_unsubscribed_since_id.sql  find_duplicate_emails.sql  mark_unsubscribed_by_email.sql  remove_duplicate_emails.sql  select_contact_by_email.sql  select_contacts_simple.sql  select_recipients_for_message.sql  select_recipients_for_message_dedup.sql  select_recipients_for_message_optimized.sql  select_recipients_for_message_test_mode.sql
sql/events/: deactivate_all_events.sql  insert_event_and_activate.sql  insert_event_param.sql  select_active_event.sql  select_event_by_id.sql  select_event_by_sympla_id.sql  select_event_internal_id_by_sympla_id.sql  update_event_by_sympla_id.sql  update_event_param.sql
sql/fixtures/: seed_contacts_exclusions.sql
sql/leads/: upsert_click_score.sql  upsert_open_score.sql
sql/maintenance/: add_constraints.sql  audit_invalid_sends.sql  create_constraints.sql  create_indexes.sql  database_maintenance.sql  fix_duplicates_and_constraint.sql  mark_bounce_alert.sql
sql/messages/: check_all_emails_already_sent.sql  check_email_already_sent.sql  check_message_exists.sql  check_message_sent.sql  check_message_valid.sql  check_sent.sql  clear_sent_flags.sql  create_message.sql  get_message_content.sql  get_message_subject.sql  insert_click_log.sql  insert_message_sent_log.sql  insert_open_log.sql  log_sent.sql  mark_message_processed.sql  mark_message_unprocessed.sql  validate_message.sql
sql/migrations/: add_unique_constraint_message_logs.sql
sql/runtime/: create_send_state_table.sql  get_send_state.sql  reset_send_state.sql  upsert_send_state.sql
sql/tags/: assign_tag_bounce_by_email.sql  assign_tag_clicked.sql  assign_tag_opened.sql  assign_tag_problem_by_email.sql  normalize_tags.sql
sql/validation/: check_no_duplicates.sql  test_complete_security.sql  test_quick_security.sql
src/: cli.py  config.py  controller_cli.py  controller_rest.py  descadastro_app.py  descadastros.py  email_service.py  fast_cli.py  logs.py  poc_syplay.py  rest_api.py  unsubscribe_app.py
src/api/: auth.py  utils.py
src/email_sender/: cli.py  config.py  controller_cli.py  controller_rest.py  daemon_utils.py  db.py  db_utils.py  email_service.py  email_service_minimal.py  email_service_simple.py  email_templating.py  fast_cli.py  logging_config.py  reporting.py  rest_api.py  scheduler_job_manager.py  scheduler_service.py  smtp_manager.py  tracking.py  unsubscribe_app.py
src/templates/: swagger-ui.html
tests/: conftest.py  test_cli.py  test_cli_coverage.py  test_cli_coverage2.py  test_cli_event_summary.py  test_cli_helpers.py  test_cli_main.py  test_cli_menu_colors.py  test_cli_menu_nav.py  test_config.py  test_config_basics.py  test_config_coverage.py  test_controller_cli.py  test_controller_cli_coverage.py  test_csv_reader.py  test_db_class.py  test_db_coverage.py  test_db_sql_prepare.py  test_email_service.py  test_email_service_additional.py  test_email_service_coverage.py  test_email_service_process.py  test_email_service_report.py  test_email_service_send_to_test.py  test_infrastructure_reporting_coverage.py  test_reporting_error.py  test_rest_api_coverage.py  test_secrets_manager.py  test_secrets_manager_coverage.py  test_smtp_manager.py  test_smtp_manager_coverage2.py  test_subject_generation.py  test_subject_regeneration.py  test_template_processor.py  test_template_processor_coverage.py  test_template_processor_more.py  test_tracking.py  test_tracking_coverage.py  test_ui_and_telegram.py  test_unsubscribe_processing.py  (+5 more)
(+49 files in other folders)
